# io_blender_mtlx

./: LICENSE  README.md  launch_blender.py  pyproject.toml
bl_env/addons/io_data_mtlx/: __init__.py  material_flatten.py  material_generate.py  material_properties.py  material_ui.py  materialx_handle.py  usd_io.py
bl_env/addons/io_data_mtlx/lib/: __init__.py  graph_utils.py  node_registry.py  open_pbr_surface.py  standard_surface.py  std_lib.py  util_operator.py
examples/: tiled_albedo.mtlx
